# GetIt

./: .gitignore  .travis.yml  CMakeLists.txt  codecov.yml  conanfile.txt  readme.md
src/: CMakeLists.txt  main.cpp
src/domain/: CppRestRequest.cpp  CppRestRequest.hpp  FormdataRequestBody.cpp  FormdataRequestBody.hpp  QtRequest.cpp  QtRequest.hpp  RawRequestBody.cpp  RawRequestBody.hpp  Request.cpp  Request.hpp  RequestFactory.cpp  RequestFactory.hpp
src/gui/MainWindow/: MainWindow.cpp  MainWindow.hpp  MainWindow.ui
src/gui/widget/: RequestWidget.hpp  ResponseWidget.hpp
src/gui/widget/AuthenticationWidget/: AuthenticationWidget.cpp  AuthenticationWidget.hpp  AuthenticationWidget.ui
src/gui/widget/BodyWidget/: BodyWidget.cpp  BodyWidget.hpp
src/gui/widget/CookiesWidget/: CookiesWidget.cpp  CookiesWidget.hpp  CookiesWidget.ui
src/gui/widget/FormdataBodyWidget/: FormdataBodyWidget.hpp
src/gui/widget/FormdataWidget/: FormdataWidget.hpp
src/gui/widget/HeaderWidget/: HeaderWidget.hpp
src/gui/widget/HeadersWidget/: HeadersWidget.cpp  HeadersWidget.hpp  HeadersWidget.ui
src/gui/widget/RawBodyWidget/: RawBodyWidget.hpp
src/gui/widget/RequestInfoWidget/: RequestInfoWidget.cpp  RequestInfoWidget.hpp  RequestInfoWidget.ui
src/gui/widget/RequestSettingsWidget/: RequestSettingsWidget.cpp  RequestSettingsWidget.hpp  RequestSettingsWidget.ui
src/gui/widget/ResponseWidget/: ResponseWidget.cpp  ResponseWidget.hpp
src/gui/window/MainWindow/: MainWindow.hpp
tests/: CMakeLists.txt
tests/domain/: tst_CppRestRequest.cpp  tst_FormdataRequestBody.cpp  tst_RawRequestBody.cpp
